src/objects/ApprovalRequiredControl__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cocoa</fullName>
                    <default>true</default>
                    <label>Cocoa</label>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Edible_Nuts</fullName>
                </value>
                <value>
                    <fullName>Spice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                    <default>true</default>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>EMENA</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Required?</label>
        <type>Checkbox</type>
    </fields>
    <label>ApprovalRequiredControl</label>
    <pluralLabel>ApprovalRequiredControl</pluralLabel>
</CustomObject>